# gendiff-project

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py
gendiff/diff/: diff.py  diff_names.py  gendiff.py
gendiff/files/: f1.yaml  f2.yaml  file1.yaml  file1.yml  file2.yaml
gendiff/files/txt_files/: files_yaml_stylish.txt
gendiff/modules/: get_diff.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py  main_script.py
gendiff/styles/: data_conversion.py  json_style.py  plain.py  stylish.py
gendiff/styles/json_style/: json_style.py
tests/: test_gendiff.py
tests/fixtures/: a.txt  file2.yml  file_with_nesting1.yaml  file_with_nesting2.yaml  jjjjjjj.json  jjjjjjjjjj.json  kkkkkkkkkk.json  test1.json  test2.json  test_file1.json  test_file2.json  test_file2.yml
tests/fixtures/txt_files/: diff_files_json_format.txt  diff_json_format.txt
