[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Игорь Рудич <rudi4.clarinet@mail.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main_script:generate_diff"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
